# FastApiWithMongoStarter

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MODERNIZATION_PLAN.md  README.md  docker-compose.yml  init-mongo.js  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
app/: main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: movie.py  movies.py
app/core/: config.py  errors.py  exceptions.py  security.py  settings.py
app/crud/: movie.py  shortcut.py  utils.py
app/db/: database.py  mongodb.py  mongodb_utils.py
app/models/: classification.py  dbmodel.py  movie.py  rwmodel.py
app/repositories/: movie.py
app/schemas/: movie.py
app/services/: movie.py
tests/: conftest.py
tests/integration/: test_health.py  test_movies_api.py
tests/unit/: test_repositories.py  test_schemas.py  test_services.py
